# omni

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  omni.rb  package.json
.pdd/canvas/: 0001-pi-extension-integration.md
.pdd/spikes/: SPIKE-0001-pi-package-install.md
.pi/: settings.json
docs/: CLAUDE.md  HOW_TO_USE.md  MIGRATION.md  PERFOMANCE.md
i18n/: README-ar.md  README-id.md  README-ja.md  README-ko.md  README-vi.md  README-zh.md
integrations/antigravity/: README.md  antigravity.plugin.json
integrations/codex-cli/: README.md  install.sh
integrations/continue-dev/: README.md  package-lock.json  package.json  tsconfig.json
integrations/openclaw/: openclaw.plugin.json
integrations/opencode/: README.md  package-lock.json  package.json  tsconfig.json
integrations/vscode/: README.md  copilot-instructions.md  omni_tasks.json
plugins/openclaw/: README.md  index.ts  openclaw.plugin.json  package-lock.json  package.json  runtime-api.ts  tsconfig.json
plugins/pi/: README.md  index.ts  package-lock.json  package.json  tsconfig.json
scripts/: bump_version.sh  install.ps1  install.sh  omni-release.sh  update_homebrew_sha.sh
src/: lib.rs  main.rs
src/agents/: antigravity.rs  claude.rs  cline.rs  codex.rs  copilot.rs  cursor.rs  gemini.rs  hermes.rs  mod.rs  multiagent.rs  openclaw.rs  opencode.rs  pi.rs  roo_code.rs  vscode.rs  zed.rs
src/cli/: doctor.rs  init.rs  learn.rs  mod.rs  optimize.rs  patterns.rs  query.rs  reset.rs  rewind.rs  rewrite.rs  serve.rs  session.rs  stats.rs
src/distillers/: build.rs  generic.rs  git.rs  jsts.rs  mod.rs  readfile.rs  search.rs  system_ops.rs
src/graph/: indexer.rs
src/guard/: config.rs  env.rs  limits.rs  trust.rs  update.rs
src/hooks/: dispatcher.rs  (+9 more)
tests/: savings_assertions.rs  security_tests.rs  smoke_test.sh
(+22 files in other folders)
